--- a/common.id_ID.po
+++ b/common.id_ID.po
@@ -8,6 +8,7 @@
 # Ariesandy Hidayat, 2023
 # Ariesandy Hidayat, 2023
 # red koala, 2023
+# Red Koala, 2023
 # red koala, 2023
 msgid ""
 msgstr ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: red koala, 2023\n"
+"Last-Translator: Red Koala, 2023\n"
 "Language-Team: Indonesian (Indonesia) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/id_ID/)\n"
 "Language: id_ID\n"
@@ -4463,7 +4464,7 @@ msgstr ""
 #: qcsrc/common/notifications/all.inc:735
 #, c-format
 msgid "^BGWaiting for %s player(s) to join..."
-msgstr ""
+msgstr "^BGMenunggu pemain %s bergabung..."
 
 #: qcsrc/common/notifications/all.inc:737
 msgid "^BGYour weapon has been downgraded until you find some ammo!"
