--- a/common.id_ID.po
+++ b/common.id_ID.po
@@ -17,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Red Koala, 2023\n"
+"Last-Translator: red koala, 2023\n"
 "Language-Team: Indonesian (Indonesia) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/id_ID/)\n"
 "Language: id_ID\n"
