--- a/common.tr.po
+++ b/common.tr.po
@@ -16,6 +16,7 @@
 # Lucifer Morningstar, 2022
 # Lucifer Morningstar, 2022
 # Mehmet Ali Kaplan, 2023
+# Mehmet Ali Kaplan, 2023
 # Tan Siret Akıncı <tanakinci2002@gmail.com>, 2021
 msgid ""
 msgstr ""
@@ -23,7 +24,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Mehmet Ali Kaplan, 2023\n"
+"Last-Translator: Tan Siret Akıncı <tanakinci2002@gmail.com>, 2021\n"
 "Language-Team: Turkish (http://app.transifex.com/team-xonotic/xonotic/"
 "language/tr/)\n"
 "Language: tr\n"
