--- a/common.da.po
+++ b/common.da.po
@@ -4,6 +4,7 @@
 #
 # Translators:
 # A Person, 2023
+# A Person, 2023
 # Archy Coder, 2022
 # Archy Coder, 2022
 msgid ""
@@ -12,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: A Person, 2023\n"
+"Last-Translator: Archy Coder, 2022\n"
 "Language-Team: Danish (http://app.transifex.com/team-xonotic/xonotic/"
 "language/da/)\n"
 "Language: da\n"
