--- a/common.zh_CN.po
+++ b/common.zh_CN.po
@@ -984,8 +984,8 @@ msgid ""
 "or in all but these game types. You can also specify 'all' as a\n"
 "field to show all fields available for the current game mode."
 msgstr ""
-"在域前你可以放一个 +（或 -）号，后跟一个以逗号分割的游戏类型列表，\n"
-"之后一个斜杠，以使此域仅显示在这些（或除了这些）游戏类型中。你也可以使"
+"在域前你可以放一个 +（或 -）号，后跟一个以逗号分割的游戏模式列表，\n"
+"之后一个斜杠，以使此域仅显示在这些（或除了这些）游戏模式中。你也可以使"
 "用‘all’以显示当前游戏模式的所有域。"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:727
@@ -1324,7 +1324,7 @@ msgstr "^BG按 ^F2%s^BG 以进入游戏"
 #: qcsrc/client/main.qc:1434
 #: qcsrc/menu/xonotic/dialog_multiplayer_join_serverinfotab.qc:38
 msgid "Gametype:"
-msgstr "游戏类型："
+msgstr "游戏模式："
 
 #: qcsrc/client/main.qc:1448
 msgid "This match supports"
@@ -1382,7 +1382,7 @@ msgstr "不在意"
 
 #: qcsrc/client/mapvoting.qc:395
 msgid "Decide the gametype"
-msgstr "选择游戏种类"
+msgstr "选择游戏模式"
 
 #: qcsrc/client/mapvoting.qc:395
 msgid "Vote for a map"
@@ -2190,11 +2190,11 @@ msgstr "怪物榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:78
 msgid "Entrap grenade"
-msgstr "减速榴弹"
+msgstr "滞速榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:88
 msgid "Veil grenade"
-msgstr "隐身榴弹"
+msgstr "藏匿榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:99
 msgid "Ammo grenade"
@@ -2202,7 +2202,7 @@ msgstr "弹药榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:109
 msgid "Darkness grenade"
-msgstr "暗黑榴弹"
+msgstr "暗影榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:139
 #: qcsrc/menu/xonotic/keybinder.qc:60
@@ -3574,7 +3574,7 @@ msgstr "^BG%s%s^K1 被 ^BG%s^K1 放的小火球烧着了%s%s"
 #: qcsrc/common/notifications/all.inc:479
 #, c-format
 msgid "^BG%s^K1 should have used a smaller gun%s%s"
-msgstr "^BG%s^K1 驾驭不了这么大的抢%s%s"
+msgstr "^BG%s^K1 没能驾驭这么大的枪%s%s"
 
 #: qcsrc/common/notifications/all.inc:480
 #, c-format
@@ -10274,7 +10274,7 @@ msgstr "InstaGib（瞬杀）"
 
 #: qcsrc/menu/xonotic/serverlist.qh:160
 msgid "SLCAT^Defrag Mode"
-msgstr "Defrag（无杀戮模式）"
+msgstr "Defrag（休闲）"
 
 #: qcsrc/menu/xonotic/skinlist.qc:70
 msgid "<TITLE>"
